add entry delete endpoint
